Introducing the Referee. Unfortunately, he ignores SnakeTwo.